<resources>
    <string name="app_name">FeedID3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_file">Load new MP3 file</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_imported_mp3_file">ImportedMp3File</string>
    <string name="title_activity_change">ChangeActivity</string>


    <string name="id3_artist">Artist</string>
    <string name="id3_artist_bad">red pill and l orange</string>
    <string name="id3_artist_good">Red Pill and L\'Orange</string>
    <string name="id3_artist_hint">Red Pill</string>
    <string name="id3_album">Album</string>
    <string name="id3_album_hint">Look What This World Did to Us</string>
    <string name="id3_genre">Genre</string>
    <string name="id3_genre_hint">Hip Hop</string>
    <string name="id3_title">Title</string>
    <string name="id3_title_hint">That\'s Okay</string>
    <string name="id3_year">Year</string>
    <string name="id3_track_number">Track\'s number</string>
    <string name="id3_disc_number">Disc\'s number</string>

    <string name="no_artist">No artist</string>

    <string name="credits">Credits</string>
    <string name="credits_content_artist"><a href="https://thenounproject.com/term/artist/368426">"artist"</a> by Gregor Cresnar from <a href="https://thenounproject.com">the Noun Project</a></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_credits">CreditsActivity</string>
</resources>
