<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rousseau_alexandre.feedid3.activities.ChangeActivity"
    tools:showIn="@layout/activity_change">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id3_artist"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioArtistBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/before_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="left"
            android:text="@string/id3_artist_bad" />

        <RadioButton
            android:id="@+id/radioArtistAfter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/after_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="right"
            android:text="@string/id3_artist_good" />


    </RadioGroup>




</LinearLayout>
